🩹 threshold fix and meta update

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,19 @@
     <title>Giacomo Rotondo</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Giacomo Rotondo" />
+    <meta
+      property="og:description"
+      content="Giacomo Rotondo is a Back End Engineer passionate about building robust, scalable, and efficient architectures with a keen eye for code quality and good software engineering practices."
+    />
+    <meta
+      property="og:image"
+      content="https://grotondodev.vercel.app/favicon.ico"
+    />
+    <meta property="og:url" content="https://grotondodev.vercel.app/" />
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Inter:400,700"
       rel="stylesheet"
